temp finish picas

--- a/bibtex/master_reference.bib
+++ b/bibtex/master_reference.bib
@@ -1,3 +1,108 @@
+@inproceedings{choi2020chain,
+  title={Chain-based fixed-priority scheduling of loosely-dependent tasks},
+  author={Choi, Hyunjong and Karimi, Mohsen and Kim, Hyoseung},
+  booktitle={2020 IEEE 38th International Conference on Computer Design (ICCD)},
+  pages={631--639},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{becker2016synthesizing,
+  title={Synthesizing job-level dependencies for automotive multi-rate effect chains},
+  author={Becker, Matthias and Dasari, Dakshina and Mubeen, Saad and Behnam, Moris and Nolte, Thomas},
+  booktitle={2016 IEEE 22nd International Conference on Embedded and Real-Time Computing Systems and Applications (RTCSA)},
+  pages={159--169},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{abdullah2019worst,
+  title={Worst-case cause-effect reaction latency in systems with non-blocking communication},
+  author={Abdullah, Jakaria and Dai, Gaoyang and Yi, Wang},
+  booktitle={2019 Design, Automation \& Test in Europe Conference \& Exhibition (DATE)},
+  pages={1625--1630},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{koren1995skip,
+  title={Skip-over: Algorithms and complexity for overloaded systems that allow skips},
+  author={Koren, Gilad and Shasha, Dennis},
+  booktitle={Proceedings 16th IEEE Real-Time Systems Symposium},
+  pages={110--117},
+  year={1995},
+  organization={IEEE}
+}
+
+@inproceedings{davare2007period,
+  title={Period optimization for hard real-time distributed automotive systems},
+  author={Davare, Abhijit and Zhu, Qi and Di Natale, Marco and Pinello, Claudio and Kanajan, Sri and Sangiovanni-Vincentelli, Alberto},
+  booktitle={Proceedings of the 44th annual Design Automation Conference},
+  pages={278--283},
+  year={2007}
+}
+
+@inproceedings{palencia1999exploiting,
+  title={Exploiting precedence relations in the schedulability analysis of distributed real-time systems},
+  author={Palencia, Jos{\'e} Carlos and Harbour, Michael Gonzalez},
+  booktitle={Proceedings 20th IEEE Real-Time Systems Symposium (Cat. No. 99CB37054)},
+  pages={328--339},
+  year={1999},
+  organization={IEEE}
+}
+
+@inproceedings{palencia1998schedulability,
+  title={Schedulability analysis for tasks with static and dynamic offsets},
+  author={Palencia, Jos{\'e} Carlos and Harbour, M Gonz{\'a}lez},
+  booktitle={Proceedings 19th IEEE Real-Time Systems Symposium (Cat. No. 98CB36279)},
+  pages={26--37},
+  year={1998},
+  organization={IEEE}
+}
+
+@article{gutierrez2018towards,
+  title={Towards a distributed and real-time framework for robots: Evaluation of {ROS} 2.0 communications for real-time robotic applications},
+  author={Guti{\'e}rrez, Carlos San Vicente and Juan, Lander Usategui San and Ugarte, Irati Zamalloa and Vilches, V{\'\i}ctor Mayoral},
+  journal={arXiv preprint arXiv:1809.02595},
+  year={2018}
+}
+
+@inproceedings{maruyama2016exploring,
+  title={Exploring the performance of {ROS2}},
+  author={Maruyama, Yuya and Kato, Shinpei and Azumi, Takuya},
+  booktitle={Proceedings of the 13th International Conference on Embedded Software},
+  pages={1--10},
+  year={2016}
+}
+
+@inproceedings{saito2018rosch,
+  title={{ROSCH}: real-time scheduling framework for {ROS}},
+  author={Saito, Yukihiro and Sato, Futoshi and Azumi, Takuya and Kato, Shinpei and Nishio, Nobuhiko},
+  booktitle={2018 IEEE 24th International Conference on Embedded and Real-Time Computing Systems and Applications (RTCSA)},
+  pages={52--58},
+  year={2018},
+  organization={IEEE}
+}
+
+@article{wei2016rt,
+  title={{RT-ROS}: A real-time {ROS} architecture on multi-core processors},
+  author={Wei, Hongxing and Shao, Zhenzhou and Huang, Zhen and Chen, Renhai and Guan, Yong and Tan, Jindong and Shao, Zili},
+  journal={Future Generation Computer Systems},
+  volume={56},
+  pages={171--178},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@inproceedings{saito2016priority,
+  title={Priority and synchronization support for {ROS}},
+  author={Saito, Yukihiro and Azumi, Takuya and Kato, Shinpei and Nishio, Nobuhiko},
+  booktitle={2016 IEEE 4th International Conference on Cyber-Physical Systems, Networks, and Applications (CPSNA)},
+  pages={77--82},
+  year={2016},
+  organization={IEEE}
+}
+
 @inproceedings{emberson2010techniques,
   title={Techniques for the synthesis of multiprocessor tasksets},
   author={Emberson, Paul and Stafford, Roger and Davis, Robert I},
@@ -138,8 +243,18 @@
 @inproceedings{casini2019response,
   title={Response-time analysis of {ROS 2} processing chains under reservation-based scheduling},
   author={Casini, Daniel and Bla{\ss}, Tobias and L{\"u}tkebohle, Ingo and Brandenburg, Bj{\"o}rn},
-  booktitle={31st Euromicro Conference on Real-Time Systems},
+  booktitle={31st Euromicro Conference on Real-Time Systems (ECRTS)},
   pages={1--23},
   year={2019},
   organization={Schloss Dagstuhl}
+}
+
+@inproceedings{wong2008fairness,
+  title={Fairness and interactive performance of {O(1)} and {CFS} {Linux} kernel schedulers},
+  author={Wong, CS and Tan, IKT and Kumari, RD and Lam, JW and Fun, W},
+  booktitle={2008 International Symposium on Information Technology},
+  volume={4},
+  pages={1--8},
+  year={2008},
+  organization={IEEE}
 }
