--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/abstract.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/abstract.tex
@@ -11,8 +11,8 @@
 \begin{frame}{Abstract 2}
     \begin{itemize}
         \item 本論文では, ROS2フレームワーク用の新しい優先度駆動型チェーン対応スケジューラを提案し, 提案されたスケジューラのエンドツーエンドのレイテンシ分析を提示する
-        \item このスケジューラを使用すると, 対応するチェーンの特定のタイミング要件に基づいてコールバックに優先順位が付けられるため, 重要なチェーンのエンドツーエンドのレイテンシを予測可能な範囲で改善できる
-        \item 提案されたスケジューリング設計には, ROS2 スケジューリング関連の全ての要素 (コールバック, ノード, エグゼキュータなど) を考慮した優先順位の割り当てとリソース割り当てが含まれる
+        \item このスケジューラを使用すると, 対応するチェーンの特定のタイミング要件に基づいてコールバックに優先度が付けられるため, 重要なチェーンのエンドツーエンドのレイテンシを予測可能な範囲で改善できる
+        \item 提案されたスケジューリング設計には, ROS2 スケジューリング関連の全ての要素 (コールバック, ノード, エグゼキュータなど) を考慮した優先度の割り当てとリソース割り当てが含まれる
     \end{itemize}
 \end{frame}
 
