--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/background_and_system_model.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/background_and_system_model.tex
@@ -169,7 +169,7 @@
         \item $\mathcal{E}$ は優先度の降順, すなわち $\pi_{e_{j}}>\pi_{e_{j+1}}$ でソートされる
         \item 本論文では, 各エグゼキュータを 1 つの CPU コアに割り当て, 各コアのエグゼキュータを SCHED\_FIFO でスケジュールする
               \begin{block}{SCHED\_FIFO}
-                  Linux の固定優先順位プリエンプティブリアルタイムスケジューリングポリシーであり, 優先度の範囲は 1 から 99
+                  Linux の固定優先度プリエンプティブリアルタイムスケジューリングポリシーであり, 優先度の範囲は 1 から 99
               \end{block}
               \vspace{5mm}
         \item したがって, エグゼキュータの最大数は 99 に制限されている
@@ -193,6 +193,6 @@
 \begin{frame}{チェーン優先度の意味合い}
     \begin{itemize}
         \item チェーンの優先度 $\pi_{\Gamma^{c}}$ は, システム設計者がシステム内での重要性または重要性に基づいて指定すると仮定する
-        \item これは元の ROS2 フレームワークの一部ではないが, アプリケーションレベルの要件を満たすために, コールバックとエグゼキュータの優先順位の割り当てを調整する必要があるため, セマンティック優先度と呼ぶ
+        \item これは元の ROS2 フレームワークの一部ではないが, アプリケーションレベルの要件を満たすために, コールバックとエグゼキュータの優先度の割り当てを調整する必要があるため, セマンティック優先度と呼ぶ
     \end{itemize}
 \end{frame}
