--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/challenges.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/challenges.tex
@@ -16,7 +16,7 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{実験環境2}
+\begin{frame}[label=exampleChain]{実験環境2}
     \fitimage{
         \begin{itemize}
             \item 表 に示すように, 10 個のコールバックで構成される 2 つのセーフティクリティカルチェーンを使用する
@@ -55,12 +55,12 @@
     }{challenge1_result.png}
 \end{frame}
 
-\begin{frame}{[課題2] エグゼキュータの優先順位割り当て}
+\begin{frame}{[課題2] エグゼキュータの優先度割り当て}
     \begin{itemize}
         \item デフォルトでは, エグゼキュータは Linux カーネルの Completely Fair Scheduler (CFS)~\cite{wong2008fairness} によってスケジュールされる
-        \item このスケジューラの下では, クリティカルチェーンからのコールバックを実行しているエグゼキュータに予測可能な優先順位を付けることは困難である
+        \item このスケジューラの下では, クリティカルチェーンからのコールバックを実行しているエグゼキュータに予測可能な優先度を付けることは困難である
         \item システム開発者は OS レベルの優先度をエグゼキュータに手動で割り当てることができるが, ROS2 はそれを構成するための公式のインターフェイスを提供していない
-        \item さらに, ROS2 エグゼキュータ の優先順位の割り当てに関する一般的なガイドラインはない
+        \item さらに, ROS2 エグゼキュータ の優先度の割り当てに関する一般的なガイドラインはない
     \end{itemize}
 \end{frame}
 
@@ -77,7 +77,7 @@
     \fitimage{
         \begin{itemize}
             \item 表に示すように, インスタンス間の自己干渉によって発生するチェーン 2 の長いレイテンシの問題は解決されない
-            \item さらに, 異なる重要度を持つチェーンからのコールバックが 1 つのノードに混在している場合, コールバックを異なるエグゼキュータに割り当てることができないため, エグゼキュータの優先順位の割り当てはより困難になる
+            \item さらに, 異なる重要度を持つチェーンからのコールバックが 1 つのノードに混在している場合, コールバックを異なるエグゼキュータに割り当てることができないため, エグゼキュータの優先度の割り当てはより困難になる
         \end{itemize}
     }{challenge2_result.jpg}
 \end{frame}
