--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
@@ -1,34 +1,40 @@
 % !TeX root = main.tex
 
-\section{Evaluation}
+\section{EVALUATION}
 \label{sec: evaluation}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item このセクションでは, デフォルトの ROS2 スケジューラおよび最先端の分析作業と比較することにより, 提案された PiCAS フレームワークを評価する
-\item 最初に, 自動運転ソフトウェアを実行する実際のプラットフォームでケーススタディを実施し, PiCAS の実際の有効性を特定する
-\item 次に, ランダムに生成されたワークロードを使用してスケジューリング実験を行い, PiCAS とデフォルトの ROS2 スケジューラのパフォーマンス特性を調査する
-    \end{itemize}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        デフォルトの ROS2 スケジューラおよび最先端の分析作業と比較することにより, 提案された PiCAS フレームワークを評価する
+    \end{itembox}
+    \begin{itembox}[l]{\textbf{流れ}}
+        \begin{itemize}
+            \item 自動運転ソフトウェアを実行する実際のプラットフォームでケーススタディを実施し, PiCAS の実際の有効性を特定する
+            \item ランダムに生成されたワークロードを使用してスケジューリング実験を行い, PiCAS とデフォルトの ROS2 スケジューラのパフォーマンス特性を調査する
+        \end{itemize}
+    \end{itembox}
 \end{frame}
+
 
 \subsection{Implementation}
 \label{ssec: implementation}
 
-\begin{frame}{}
+\begin{frame}{実装の詳細1}
     \begin{itemize}
-        \item 提案されたスケジューラーを, 6 コア ARMv8.2 $1.4 \mathrm{GHz}$ プロセッサを搭載した NVIDIA Xavier NX プラットフォームの Ubuntu $18.04$ 上で動作する Eloquent Elusor バージョンの ROS2 に実装した
-\item ROS2 スケジューラは, セクションで説明した独自のコールバックスケジューリングポリシーを備えているためである
-\item III-B では, 本論文の実装は主にコールバックスケジューリングポリシーを変更する
-\item (i) エグゼキュータのキュー内の準備完了コールバックを更新するための条件, および (ii) 個々のコールバックの優先順位の割り当て
-\item ROS2 では, エグゼキュータ (図 1 の rclcpp) が通信層 (図 1 の rmw) と対話して, 準備が整ったコールバックをそのキューにフェッチする
-\item スケジューラの実装は, コールバックが完了するたびにこれらのキューを更新する
-\item キューで 1 つ以上のコールバックの準備ができている場合, スケジューラは, ROS2 のデフォルトの割り当てに従う代わりに, 提案された優先度の割り当て (Alg. 11) によって決定される最も優先度の高いものを実行することを選択する
+        \item 提案されたスケジューラを, 6 コア ARMv8.2 $1.4 \mathrm{GHz}$ プロセッサを搭載した NVIDIA Xavier NX プラットフォームの Ubuntu $18.04$ 上で動作する Eloquent Elusor バージョンの ROS2 に実装した
+        \item ROS2スケジューラは, 独自のコールバックスケジューリングポリシーを備えているため, 本実装では主に以下2つを変更した
+              \begin{itemize}
+                  \item 実行キューの準備完了コールバックの更新条件
+                  \item 個々のコールバックに対する優先度割り当て
+              \end{itemize}
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{実装の詳細2}
     \begin{itemize}
-        \item 上記の変更は, ROS 開発者および研究コミュニティが簡単にアクセスして評価できるように, 大規模なソフトウェアの努力なしで行うことができることに注意
+        \item ROS2 では, エグゼキュータが通信層と対話して, readyコールバックをそのキューにフェッチする
+        \item スケジューラの実装は, コールバックが完了するたびにこれらのキューを更新する
+        \item もし 1 つ以上のコールバックがキューに準備されている場合, 我々のスケジューラは, ROS2のデフォルトの割り当てに従うのではなく, 提案された優先度割り当て (alg1) により決定された最も高い優先度を持つコールバックを選択する
     \end{itemize}
 \end{frame}
 
@@ -36,185 +42,235 @@
 \subsection{Case study}
 \label{ssec: case study}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item ケーススタディは 3 つのパートで構成されている
-\item 最初の部分は, 最先端の分析作業と比較評価するための単純なユニプロセッサシステムに焦点を当てている
-\item 第 2 部と第 3 部では, 非過負荷および過負荷の状況を考慮して, より実用的で複雑なマルチコアシステムを評価する
-    \end{itemize}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{流れ}}
+        \begin{itemize}
+            \item 最先端の分析作業と比較評価するための単純なユニプロセッサシステムに焦点を当てる
+            \item 非過負荷および過負荷の状況を考慮して, より実用的で複雑なマルチコアシステムを評価する
+        \end{itemize}
+    \end{itembox}
 \end{frame}
 
 \begin{frame}{アプローチの比較}
-    \begin{itemize}
-        \item 本論文のジョブを他の2つの既存のアプローチと比較する 1 つ目は ROS2 デフォルトスケジューラで, Linux のデフォルトスケジューリングポリシーでエグゼキュータを実行する
-\item これはベースラインであるが, 直接分析することはできない 2 つ目は最先端の分析作業 [11] で, これも ROS2 のデフォルトスケジューラを使用するが, 各エグゼキュータがリソースを予約していると想定している
-\item 要約すると, 次の 3 つの方法が比較される
-
-              \begin{itemize}
-                  \item  ROS2: 分析なしの ROS2 デフォルトスケジューラ
-
-                  \item  ROS2-SD: リソース予約と最悪の場合の応答時間分析を備えた ROS2 デフォルトスケジューラ [11]
-
-                  \item  ROS2-PiCAS: 本論文の優先度駆動型チェーン- $\underline{A}$ は, 提案されたエンドツーエンド分析を使用して $\underline{S} c h e d u l e r$ をウェアする
-
-              \end{itemize}
-    \end{itemize}
+    次の 3 つの手法を比較する
+    \begin{block}{ROS2}
+        分析なしの ROS2 デフォルトスケジューラ
+    \end{block}
+    \begin{block}{ROS2-SD}
+        リソース予約と最悪の場合の応答時間分析を備えた ROS2 デフォルトスケジューラ~\cite{casini2019response}
+        \notes{リソース予約は, Linux システムで SCHED\_DEADLINE ポリシーを使用して実装できる}
+    \end{block}
+    \begin{block}{ROS2-PiCAS}
+        エンドツーエンド分析を備えた提案スケジューラ
+    \end{block}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{コールバックの WCET計測方法}
     \begin{itemize}
-        \item ROS2-SD のリソース予約は, Linux システムで SCHED\_DEADLINE ポリシーを使用して実装できる
-\item また, ROS2-SD の分析のために, [11] の著者によって [5] で提供されたソースコードを使用した
-\item [5] の ROS2SD の分析は過負荷システムのテストをサポートしていないため, ROS2-SD 分析は過負荷でないセットアップにのみ適用する
-\item 分析のために, 組み込みプラットフォームでの 5,000 回の実行から分離して各コールバックの実行時間を測定し, そのコールバックの WCET として観測された最大のものを選択した
+        \item 分析のために, 組み込みプラットフォームでの 5,000 回の実行から各コールバックの実行時間を測定し, そのコールバックの WCET として観測された最大のものを選択した
     \end{itemize}
 \end{frame}
 
 \begin{frame}{ケーススタディ I (ユニプロセッサシステム)}
+    \fitimage{
+        \begin{itemize}
+            \item 特定の利用可能な予算に対するチェーンレイテンシを評価する
+            \item 図は, ユニプロセッサ環境の 2 つのチェーンで構成されるこのケーススタディを示している
+        \end{itemize}
+    }{case_study1}
+\end{frame}
+
+\begin{frame}{ケーススタディ I 実験環境}
     \begin{itemize}
-        \item 最初に, [11] で使用されたケーススタディに動機付けられた, 特定の利用可能な予算に対するチェーンレイテンシを評価する
-\item 図 7 は, ユニプロセッサ環境の 2 つのチェーンで構成されるこのケーススタディを示している
-\item [11] のケーススタディに従って, コールバックは特定の予算額で同じ予約に割り当てられ, コールバックの優先度は ROS2-SD のコールバックのインデックスの降順で与えられる
-\item すなわち, インデックスの低いコールバックには優先度が高くなる
-\item その意味で, チェーン $1\left(\Gamma^{1}\right)$ はチェーン $2\left(\Gamma^{2}\right)$ よりもセマンティック優先度が高いと見なし, この情報を ROS2-PiCAS でコールバック優先度割り当てとノード割り当てに使用する
-\item ROS2PiCAS での予算の影響を評価するために, 2 つのチェーン $\left(\Gamma^{1}\right.$ および $\left.\Gamma^{2}\right)$ と同じ期間 (すなわち,  $80 \mathrm{~ms}$ ) で実行されるが, システムで最も高いリアルタイム優先度を持つ定期的なスレッドを作成した
-\item このスレッドを使用して, そのスレッドの実行時間を調整することで, ROS2-PiCAS の利用可能な予算を制限することができた
+        \item コールバックは特定の予算額で同じ予約に割り当てられ, コールバックの優先度は ROS2-SD のコールバックのインデックスの降順で与えられる
+        \item チェーン $1\left(\Gamma^{1}\right)$ はチェーン $2\left(\Gamma^{2}\right)$ よりも優先度が高いと見なし, この情報を ROS2-PiCAS でコールバック優先度割り当てとノード割り当てに使用する
+        \item ROS2PiCAS での予算の影響を評価するために, 2 つのチェーン $\left(\Gamma^{1}\right.$ および $\left.\Gamma^{2}\right)$ と同じ周期 (すなわち,  $80 \mathrm{~ms}$ ) で実行されるが, システムで最も高いリアルタイム優先度を持つ定期的なスレッドを作成した
+        \item このスレッドを使用して, そのスレッドの実行時間を調整することで, ROS2-PiCAS の利用可能な予算を制限する
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{ケーススタディ I 結果}
+    \fitimage{
+        図は, 2 つのアプローチでのチェーンのエンドツーエンドのレイテンシを示す
+    }{case_study1_result}
+\end{frame}
+
+\begin{frame}{ケーススタディ I 考察1}
     \begin{itemize}
-        \item 図 8 は, 2 つのアプローチでのチェーンのエンドツーエンドのレイテンシを示している
-\item 予想通り, 利用可能な予算が増加するにつれて, 両方のアプローチのレイテンシーが減少することが分かる
-\item [11] で説明されているように, ROS2-SD の場合, 組み込みの ROS2 スケジューリングポリシーにより, 優先順位の割り当てがコールバックの応答時間の上界に対して無効になるため, チェーン 1 とチェーン 2 のレイテンシは同じである
-\item しかし, ROS2-PiCAS のチェーン 1 は ROS2-SD よりもレイテンシが低くなる
-\item また, ROS2-PiCAS の 2 つのチェーンのエグゼキュータの優先度を周期的なスレッドよりも高くして, 別の実験を行いた
-\item 図 8 の黄色の線で示されているように, この場合, チェーンは定期的なスレッドによって干渉されないため, 利用可能な予算に関係なくレイテンシが一貫していることが分かる
+        \item 利用可能な予算が増加するにつれて, 両方のアプローチのレイテンシが減少する
+        \item ROS2-PiCAS のチェーン 1 は ROS2-SD よりもレイテンシが低くなる
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{ケーススタディ I 考察2}
+    \begin{itemize}
+        \item また, ROS2-PiCAS の 2 つのチェーンのエグゼキュータの優先度を周期的なスレッドよりも高くして, 別の実験を行った
+        \item 図の黄色の線で示されているように, チェーンは定期的なスレッドによって干渉されないため, 利用可能な予算に関係なくレイテンシが一貫している
     \end{itemize}
 \end{frame}
 
 \begin{frame}{ケーススタディ II (マルチコアシステム)}
+    \fitimage{
+        \begin{itemize}
+            \item 実際のシナリオでのチェーン対応スケジューリングの有効性を評価する
+            \item 図は, このケーススタディにおけるチェーン構成を示している
+        \end{itemize}
+    }{case_study2}
+\end{frame}
+
+\begin{frame}{ケーススタディ II 実験環境}
     \begin{itemize}
-        \item 実際のシナリオでのチェーン対応スケジューリングの有効性を評価するために, F1/10 車両プラットフォームの屋内自動運転スタックに触発されたより複雑なチェーンを追加する [1]
-\item このケーススタディは, 関心のある 6 つのリアルタイムチェーンと, 4 コアシステム内の他の 6 つのベストエフォート型チェーンで構成されている
-\item 図10]は, このケーススタディにおけるチェーン構成を示している
-\item より低いインデックスチェーンはより高いセマンティックプライオリティを持つと仮定する
-\item チェーンの優先順位を指定して, ROS2-PiCAS をノード割り当てに使用する
-\item 最初にチェーン 1 からチェーン 4 をそれぞれ異なる CPU コアに割り当て, 次に負荷分散方式でその他を分散する
-\item 割り当て後の各 CPU コアの利用率は, 平均で $0.97$ である
-\item デフォルトの ROS2 スケジューラと以前の研究 [11] では割り当て方式が提供されていないため, ROS2 と ROS2-SD では, 同じノードからコアへの割り当てと, コアごとに 1 つのエグゼキュータを使用した
-\item ROS2-SD では, 各コアのリソース予約バジェットも $100 \%$ に設定した
+        \item より低いインデックスチェーンはより高いセマンティック優先度を持つと仮定する
+        \item チェーンの優先度を指定して, ROS2-PiCAS をノード割り当てに使用する
+        \item 最初にチェーン 1 からチェーン 4 をそれぞれ異なる CPU コアに割り当て, 次に負荷分散方式でその他を分散する
+        \item 割り当て後の各 CPU コアの利用率は, 平均で $0.97$ である
+        \item デフォルトの ROS2 スケジューラと以前の研究 [11] では割り当て方式が提供されていないため, ROS2 と ROS2-SD では, 同じノードからコアへの割り当てと, コアごとに 1 つのエグゼキュータを使用した
+        \item ROS2-SD では, 各コアのリソース予約バジェットも $100 \%$ に設定した
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 図 9 a は, 3 つのアプローチで観察されたチェーンのエンドツーエンドのレイテンシを示している
-\item 図 $9 \mathrm{~b}$ は, 測定から観測された最大レイテンシを示し, それを分析されたレイテンシと比較する
-\item 本論文の実験で観測されたレイテンシは, リリース時刻ではなく, タイマコールバック実行の開始時間を記録することによって得られたことを明確にする
-\item これは, 初期リリースオフセットの設定に対する ROS2 のサポートがないために避けられなかったものである
-\item しかし, チェーン 1 からチェーン 4 の開始時間は, ROS2-PiCAS でのリリース時刻と全く同じであることに注意
-\item これは, それぞれが異なる CPU コア上の最も優先度の高いエグゼキュータに割り当てられているためである
-\item チェーン 5 とチェーン 6 がそれぞれチェーン 1 (CPU 1) とチェーン 4 (CPU 4) と同じ CPU コアに割り当てられている場合でも, エグゼキュータの優先度 (すなわち,, 各 CPU コアで 2 番目に優先度の高いエグゼキュータ) と, ROS2-PiCAS の下での期間 (すなわち, 他のチェーンとの調和)
-\item しかし, ROS2 および ROS2-SD でのリリース時刻ベースのレイテンシを直感的に見積もることはできない
-    \end{itemize}
+\begin{frame}{ケーススタディ II 結果1}
+    \fitimage{
+        図は, 3 つのアプローチで観察されたチェーンのエンドツーエンドのレイテンシを示している
+    }{case_study2_result_a}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{ケーススタディ II 結果1}
+    \fitimage{
+        図は, 測定から観測された最大レイテンシと分析されたレイテンシの比較を示す
+    }{case_study2_result_b}
+\end{frame}
+
+% \begin{frame}{ケーススタディ II 考察}
+%     \begin{itemize}
+%         \item 本論文の実験で観測されたレイテンシは, リリース時刻ではなく, タイマコールバック実行の開始時間を記録することによって得られたことを明確にする
+%         \item これは, 初期リリースオフセットの設定に対する ROS2 のサポートがないために避けられなかったものである
+%         \item しかし, チェーン 1 からチェーン 4 の開始時間は, ROS2-PiCAS でのリリース時刻と全く同じであることに注意
+%         \item これは, それぞれが異なる CPU コア上の最も優先度の高いエグゼキュータに割り当てられているためである
+%         \item チェーン 5 とチェーン 6 がそれぞれチェーン 1 (CPU 1) とチェーン 4 (CPU 4) と同じ CPU コアに割り当てられている場合でも, エグゼキュータの優先度 (すなわち,, 各 CPU コアで 2 番目に優先度の高いエグゼキュータ) と, ROS2-PiCAS の下での期間 (すなわち, 他のチェーンとの調和)
+%         \item しかし, ROS2 および ROS2-SD でのリリース時刻ベースのレイテンシを直感的に見積もることはできない
+%     \end{itemize}
+% \end{frame}
+
+\begin{frame}{ケーススタディ II PiCASの優れている点}
     \begin{itemize}
         \item 予想どおり, ROS2-PiCAS はほとんどのリアルタイムチェーン (チェーン 1 からチェーン 5 など) で他のチェーンよりも優れている
-\item さらに, レイテンシ分析では, これらのリアルタイムチェーンの上界がより厳しくなっている
-\item しかし, ROS2-PiCAS でのチェーン 6 の観測および分析されたレイテンシは, 他のものよりも悪いことが分かる
-\item この現象については, 次の 2 つの理由から説明する
+        \item さらに, レイテンシ分析では, これらのリアルタイムチェーンの上界がより厳しくなっている
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{ケーススタディ II PiCASの問題点}
     \begin{itemize}
-        \item まず, ROS2-PiCAS では, 優先度の高いチェーン $4(T=100 \mathrm{~ms}$ と $C=45.1 \mathrm{~ms})$ がチェーン 6 ( $T=1000 \mathrm{~ms}$ と $C=197.6 \mathrm{~ms}$ ) に複数回干渉する可能性があるが, ROS2 と ROS2-SD では, チェーン 4 とチェーン 6 は, ノンプリエンプティブコールバックの実行と, デフォルトの ROS2 スケジューラの公平性に基づくスケジューリング
+        \item しかし, ROS2-PiCAS でのチェーン 6 の観測および分析されたレイテンシは, 他のものよりも悪いことが分かる
+        \item この現象については, 次の 2 つの理由から説明する
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{PiCASの問題点の理由1}
     \begin{itemize}
-        \item 第 2 に, ROS2 および ROS2-SD で観測されたチェーン 6 のレイテンシには, チェーン 4 からのブロック時間が含まれていない
-\item 後者の理由により, より明確な証明がチェーン 4 に見られる
-\item プリエンプティブではないため, ROS2 および ROS2-SD でのチェーン 4 のレイテンシは, 少なくともチェーン 6 の実行時間よりも大きくなるはずである
-\item しかし, 観測されたレイテンシにはチェーン 6 の実行時間は含まれていない
-\item ROS2-SD でのチェーン 4 の観測されたレイテンシと分析されたレイテンシの大きな差 (265.5 ミリ秒と図 9b に示されている $1804 \mathrm{~ms}$) は, この議論を強化する
+        \item ROS2-PiCAS では, 優先度の高いチェーン $4(T=100 \mathrm{~ms}$ と $C=45.1 \mathrm{~ms})$ がチェーン 6 ( $T=1000 \mathrm{~ms}$ と $C=197.6 \mathrm{~ms}$ ) に複数回干渉する可能性があるが, ROS2 スケジューラのデフォルトのノンプリエンプティブコールバック実行および公平性に基づくスケジューリングによりチェイン 4 とチェイン 6 が互いに 1 回 だけブロックできる
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{PiCASの問題点の理由2}
     \begin{itemize}
-        \item 結論として, PiCAS はエンドツーエンドのチェーンレイテンシに大きなメリットをもたらし, セマンティックな優先度を尊重しながらチェーンをスケジュールできることが分かった
+        \item ROS2およびROS2-SDにおけるチェーン6の観測レイテンシは, 上述のようにタイマコールバックの開始時刻を用いて得られるため, チェーン4からのブロック時間は含まれない
+        \item 後者の理由により, より明確な証明がチェーン 4 に見られる
+        \item ノンプリエンプティブのため, ROS2およびROS2-SDにおけるチェーン4の待ち時間は, 少なくともチェーン6の実行時間より大きくなるはずであると予想される.
+        \item しかし, 観測された待ち時間にはチェーン6の実行時間は含まれていない.
+        \item ROS2-SDにおける連チェーン4の待ち時間の観測値と解析値の差が大きい（図9bの265.5ms と $1804 \mathrm{~ms}$）ことは, この議論を補強しています.
     \end{itemize}
 \end{frame}
+
+\begin{frame}{ケーススタディ II 考察結論}
+    \begin{itemize}
+        \item 結論として, PiCAS はエンドツーエンドのチェーンレイテンシに大きなメリットをもたらし, 優先度を尊重しながらチェーンをスケジュールできることが分かった
+    \end{itemize}
+\end{frame}
+
 
 \begin{frame}{ケーススタディ III (過負荷シナリオ)}
     \begin{itemize}
-        \item 過負荷のシステム設定でのレイテンシの動作を評価するために, より多くのベストエフォートチェーンを使用するようになった
-\item 上記のマルチコアシステムにさらに 4 つのベストエフォートチェーンを追加することで, 各 CPU コアの利用率を平均で $1.25$ にした
-\item 図 11 に見られるように, ROS2-PiCAS は, リアルタイムチェーンの他のアプローチよりも大幅に優れている
-\item 特に, ROS2-PiCAS は, 最も重要なチェーン, すなわちチェーン 1 とチェーン 2 の平均エンドツーエンドレイテンシをそれぞれ $85 \%$ と $90 \%$ まで削減する
-\item さらに, ROS2-PiCAS の分析ではリアルタイムチェーンの厳密な上界が示されたが, ROS2-SD の分析ではこの過負荷システムのテストに失敗した
+        \item 過負荷のシステム設定でのレイテンシの動作を評価する
+        \item ケーススタディ II にさらに 4 つのベストエフォートチェーンを追加することで, 各 CPU コアの利用率を平均で $1.25$ にした
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{ケーススタディ III 結果}
+    \fullimage{case_study3_result}
+\end{frame}
+
+\begin{frame}{ケーススタディ III 考察}
     \begin{itemize}
-        \item 実験セットアップでは, コア間のタイミング干渉による顕著な遅延は観察されなかったことに注意
-\item しかし, キャッシュ, メモリバス, DRAM バンクなどの共有メモリリソースは, マルチコアプラットフォームでタイミングを予測できない原因となる重要な原因である [8, 19, 20]
-\item この問題への対処は, 今後の作業の一環として残する
+        \item ROS2-PiCAS は, リアルタイムチェーンの他のアプローチよりも大幅に優れている
+        \item 特に, ROS2-PiCAS は, 最も重要なチェーン, すなわちチェーン 1 とチェーン 2 の平均エンドツーエンドレイテンシをそれぞれ $85 \%$ と $90 \%$ まで削減する
+        \item さらに, ROS2-PiCAS の分析ではリアルタイムチェーンの厳密な上界が示されたが, ROS2-SD の分析ではこの過負荷システムのテストに失敗した
     \end{itemize}
 \end{frame}
+
 
 
 \subsection{Schedulability experiments}
 \label{ssec: schedulability experiments}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item このサブセクションでは, ROS2-SD および ROS2-PiCAS でのチェーンのスケジューリング可能性を評価する
-\item また, これらのアプローチの分析実行時間も評価する
-\item 全ての実験は, デュアル AMD EPYC 7452 $2.35 \mathrm{GHz}$ プロセッサを搭載したマシンで行われる
-    \end{itemize}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        \begin{itemize}
+            \item ROS2-SD および ROS2-PiCAS でのチェーンのスケジューラビリティを評価する
+            \item これらのアプローチの分析実行時間も評価する
+        \end{itemize}
+    \end{itembox}
 \end{frame}
 
-\begin{frame}{ワークロードの生成}
+\begin{frame}{実験マシン}
+    全ての実験は, デュアル AMD EPYC 7452 $2.35 \mathrm{GHz}$ プロセッサを搭載したマシンで行われる
+\end{frame}
+
+\begin{frame}{ワークロードの生成方法}
     \begin{itemize}
         \item システムの利用率ごとに, ランダムに生成された 1,000 個のワークロードセットのコールバックを使用する
-\item ワークロードセットの利用率は, 4 コア環境の $\{2.5,3.0,3.5\}$ から選択される
-\item ワークロードセットごとに, 9 つのチェーンを形成する 45 のコールバックを使用する
-\item すなわち, 各チェーンは 5 つのコールバックで構成される
-\item 各コールバックの利用率は, UUniFast アルゴリズム [10] によって取得される
-\item チェーン期間は $[50,1000] \mathrm{ms}$ の範囲でランダムに選択され, デッドラインはその期間に等しく設定される
-\item 各チェーンの利用率は 1.0 を超えません
-\item 各ワークロードセットの生成後, インデックスの小さいチェーンほど期間が短くなるようにチェーンの順序が変更され, インデックスの小さいチェーンにはより高いセマンティック優先度が割り当てられる
+        \item ワークロードセットの利用率は, 4 コア環境の $\{2.5,3.0,3.5\}$ から選択される
+        \item ワークロードセットごとに, 9 つのチェーンを形成する 45 のコールバックを使用する
+        \item すなわち, 各チェーンは 5 つのコールバックで構成される
+        \item 各コールバックの利用率は, UUniFast アルゴリズム [10] によって取得される
+        \item チェーン期間は $[50,1000] \mathrm{ms}$ の範囲でランダムに選択され, デッドラインはその期間に等しく設定される
+        \item 各チェーンの利用率は 1.0 を超えません
+        \item 各ワークロードセットの生成後, インデックスの小さいチェーンほど期間が短くなるようにチェーンの順序が変更され, インデックスの小さいチェーンにはより高いセマンティック優先度が割り当てられる
     \end{itemize}
 \end{frame}
 
-\begin{frame}{スケジューリング可能性テストの比較}
+\begin{frame}{スケジューラビリティテストの比較 [結果]}
+    \fullimage{schedulability_result1}
+\end{frame}
+
+\begin{frame}{スケジューラビリティテストの比較 [結果考察]}
     \begin{itemize}
-        \item 図 12 に, 各利用率におけるスケジュール可能率の結果を示す
-\item どちらのアプローチでも, 利用率が高くなると, スケジューリング可能率は低下する
-\item ROS2-PiCAS は, 全ての利用設定で ROS2-SD よりも大幅に優れている
-\item ROS2-PiCAS では, 最初の 4 つのチェーン (チェーン 1 からチェーン 4 まで) は, それぞれが異なる CPU コア上の最も優先度の高いエグゼキュータに割り当てられるため, 常にスケジュール可能である
-\item さらに, ROS2-PiCAS はセマンティック優先度に基づいてチェーンに優先順位を付けるため, チェーンの優先度が低くなる (チェーンインデックスが高くなる) と, スケジュール可能率が低下する
-\item 一方, ROS2-SD では, チェーンデッドラインが短くなるにつれて比率が減少することが分かる (チェーンインデックスが低くなる)
-\item これは主に, ケーススタディ I (セクション VII-B.)
+        \item どちらのアプローチでも, 利用率が高くなると, スケジューリング可能率は低下する
+        \item ROS2-PiCAS は, 全ての利用設定で ROS2-SD よりも大幅に優れている
+        \item ROS2-PiCAS では, 最初の 4 つのチェーン (チェーン 1 からチェーン 4 まで) は, それぞれが異なる CPU コア上の最も優先度の高いエグゼキュータに割り当てられるため, 常にスケジュール可能である
+        \item さらに, ROS2-PiCAS はセマンティック優先度に基づいてチェーンに優先度を付けるため, チェーンの優先度が低くなる (チェーンインデックスが高くなる) と, スケジュール可能率が低下する
+        \item 一方, ROS2-SD では, チェーンデッドラインが短くなるにつれて比率が減少することが分かる (チェーンインデックスが低くなる)
+        \item これは主に, ケーススタディ I (セクション VII-B.)
     \end{itemize}
 \end{frame}
 
-\begin{frame}{解析実行時間の比較}
+\begin{frame}{解析実行時間の比較 [実験環境]}
     \begin{itemize}
         \item この実験では, ROS2-SD と ROS2-PiCAS について, 各ワークロードセットのエンドツーエンドのレイテンシを計算する時間である分析の実行時間を比較する
-\item 各分析ツールはシングルスレッドである分析の実行時間は, ワークロードセットの利用率によって自明に影響を受ける
-\item したがって, 以前と同じワークロードセットを使用する
-\item ワークロードセットあたりの利用率は $2.5,3.0$ で, 3.5 である
-\item 平均解析時間の結果を図 13 に示す
-\item どちらのアプローチでも利用率が上がると解析時間は長くなるが, ROS2-SD は ROS2-PiCAS よりもはるかに遅くなる
-\item これは, ROS2-PiCAS とは異なり, ROS2-SD 分析の探索空間は可能な限り長いビジー間隔 (利用率とともに増加する傾向がある) のためであり, 分析は全ての応答時間が収束するグローバルな固定点を繰り返し探索するためである [11]
-\item したがって, チェーン対応スケジューラの提案された分析は, 既存のアプローチよりもはるかに高速であり, 複雑なシステムやランタイムアドミッションコントロールに適用できると結論付けている
+        \item 各分析ツールはシングルスレッドである分析の実行時間は, ワークロードセットの利用率によって自明に影響を受ける
+        \item したがって, 以前と同じワークロードセットを使用する
+        \item ワークロードセットあたりの利用率は $2.5, 3.0, 3.5$ である
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{解析実行時間の比較 [結果]}
+    \fullimage{analysys_time_result}
+\end{frame}
+
+\begin{frame}{解析実行時間の比較 [結果考察]}
+    \begin{itemize}
+        \item どちらのアプローチでも利用率が上がると解析時間は長くなるが, ROS2-SD は ROS2-PiCAS よりもはるかに遅くなる
+        \item これは, ROS2-PiCAS とは異なり, ROS2-SD 分析の探索空間は可能な限り長いビジー間隔 (利用率とともに増加する傾向がある) のためであり, 分析は全ての応答時間が収束するグローバルな固定点を繰り返し探索するためである [11]
+        \item したがって, チェーン対応スケジューラの提案された分析は, 既存のアプローチよりもはるかに高速であり, 複雑なシステムやランタイムアドミッションコントロールに適用できると結論付けている
     \end{itemize}
 \end{frame}
