--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/introduction.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/introduction.tex
@@ -57,14 +57,14 @@
 \begin{frame}{本論文の提案}
     \begin{itemize}
         \item 本論文では, マルチコア環境における ROS2用 の優先度駆動型チェーン考慮スケジューラである PiCAS を提案する
-        \item 本論文の目標は, 重要度とタイミングの要件に基づいてチェーンのコールバックの実行に優先順位を付けることにより, エンドツーエンドのチェーンレイテンシを最小限に抑えることである
+        \item 本論文の目標は, 重要度とタイミングの要件に基づいてチェーンのコールバックの実行に優先度を付けることにより, エンドツーエンドのチェーンレイテンシを最小限に抑えることである
         \item ROS2「Eloquent Elusor」バージョンに PiCAS を実装し, 実際の組み込みプラットフォームでそのパフォーマンスを評価した
     \end{itemize}
 \end{frame}
 
 \begin{frame}{貢献 1}
     \begin{itemize}
-        \item  コールバックの優先順位の割り当てと, マルチコアプラットフォームの CPU コアへのエグゼキュータおよびエグゼキュータへのノードの割り当てを含む PiCAS の設計を提示する
+        \item  コールバックの優先度の割り当てと, マルチコアプラットフォームの CPU コアへのエグゼキュータおよびエグゼキュータへのノードの割り当てを含む PiCAS の設計を提示する
         \item PiCAS は, チェーンのエンドツーエンドのタイミング要件を尊重しながら, コールバックとエグゼキュータを実行する
         \item  提案されたPiCASフレームワークの下で, チェーンのエンドツーエンドのレイテンシを上界とする分析を開発する
         \item 分析は, チェーンのエンドツーエンドのレイテンシの安全な境界を提供する
