--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
@@ -7,7 +7,7 @@
 
 
 %%%%% Front Cover %%%%%
-\title{Real-Time Scheduling and Analysis of Processing Chains on Multi-threaded Executor in ROS 2}
+\title{Real-Time Scheduling and Analysis of Processing Chains on Multi-threaded エグゼキュータ in ROS 2}
 \subtitle{2022 RTSS}
 \author{矢野 篤志}
 \date{\today}
