--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/main.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/main.tex
@@ -7,8 +7,8 @@
 
 
 %%%%% Front Cover %%%%%
-\title{PiCAS: New Design of Priority-Driven Chain-Aware Scheduling for ROS2}
-\subtitle{2021 RTAS}
+\title{Response-Time Analysis of ROS 2 Processing Chains Under Reservation-Based Scheduling}
+\subtitle{2019 ECRTS}
 \author{矢野 篤志}
 \date{\today}
 \institute[EMBIV]{EMBIV}
@@ -21,29 +21,23 @@
 \maketitle
 
 % \summary
-\input{abstract.tex}
+% \input{abstract.tex}
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
     \scriptsize\tableofcontents[hideallsubsections]
 \end{frame}
 
-% \input{introduction.tex}
-% \input{related_work.tex}
-\input{background_and_system_model.tex}
-\input{challenges.tex}
-\input{priority_driven_chain_aware_scheduling.tex}
-\input{analysis_of_end_to_end_latency.tex}
-\input{evaluation.tex}
-% \input{conclusion.tex}
+\input{introduction.tex}
+\input{bachground.tex}
 
 \lastpage
 
-\section*{Reference}
-\begin{frame}[allowframebreaks]{Reference}
-    \beamertemplatetextbibitems
-    \bibliographystyle{unsrt}
-    \bibliography{\beamerDir/bibtex/master_reference}
-\end{frame}
+% \section*{Reference}
+% \begin{frame}[allowframebreaks]{Reference}
+%     \beamertemplatetextbibitems
+%     \bibliographystyle{unsrt}
+%     \bibliography{\beamerDir/bibtex/master_reference}
+% \end{frame}
 
 \end{document}
