--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/analysis_of_end_to_end_latency.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/analysis_of_end_to_end_latency.tex
@@ -3,138 +3,244 @@
 \section{ANALYSIS OF END-TO-END LATENCY}
 \label{sec: analysis of end-to-end latency}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item このセクションでは, ROS2 用に提案されたチェーン対応スケジューリングの下でのチェーンのエンドツーエンドのレイテンシ分析を示す
-        \item 分析の目的で, 1 つの CPU コア (セグメント $\Phi_{i}$ と呼ばれる) 上のチェーン $\Gamma^{c}$ の連続したサブセットは, 単一の人為的なコールバックと見なすことができる
-        \item これは, $\Gamma^{c}$ のタイマコールバックがその期間に基づいて到着すると, 残りのコールバックが前のコールバックの完了によって直接トリガされ, それらの間に自己誘発遅延がないためである
-        \item チェーンが複数の CPU コアで実行される場合, 複数のセグメントに分解できる
-        \item したがって, チェーンのエンドツーエンドの分析は, (i) チェーンの各セグメントの最悪の場合の応答時間 (WCRT) を計算し, (ii) 全てのセグメントの WCRT を合計するという 2 つのステップで実行できる
-        \item 指定されたチェーンの図 6 は, 3 つのセグメントを持つチェーンの例を示している
-        \item 各ステップを提示し, 分析がどのように行われるかを説明する
-    \end{itemize}
-\end{frame}
-
-\subsection{Worst-case response time of a segment $\Phi_{i}$}
-\label{ssec: worst-case response time of a segment phi}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item 最初に, チェーンの各セグメントの WCRT を計算する
-        \item セグメント $\Phi_{i}$ は, 優先順位が $\Phi_{i}$ の最低優先順位のコールバックから継承される単一の人為的なコールバックと見なされ, その WCET はそのセグメント内の全てのコールバックの WCET の合計である
-    \end{itemize}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        ROS2 用に提案されたチェーン対応スケジューリングの下でのチェーンのエンドツーエンドのレイテンシ分析を示す
+    \end{itembox}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item より高いセマンティックプライオリティチェーンからの干渉
-        \item ターゲットセグメント $\Phi_{i}$ の WCRT を分析するには, 他のコールバックによって課される最大干渉の上界を設定する必要がある
-        \item 本論文のフレームワークでは, そのようなコールバックは, 同じ CPU 上の $\Phi_{i}$ のエグゼキュータより優先度の高いエグゼキュータで実行されるか, $\Phi_{i}$ と同じエグゼキュータで優先度の高いコールバックである
-        \item これらを考慮して, 次のLemmaは, 任意の時間間隔 $t$ に対する干渉コールバック $\tau_{k}$ の最大到着数をキャプチャする
+        \item 本資料では, 分析方法のみを示す
+        \item 証明は論文を参照
     \end{itemize}
 \end{frame}
 
-\begin{frame}[label=lemma2]{Lemma 2}
-    \begin{lemma}[]
-        任意の時間枠 $t$ の間にターゲットセグメント $\Phi_{i} \subset \Gamma^{c}$ に干渉を引き起こすコールバック $\tau_{k} \in \Gamma^{c^{\prime}}$ の到着の最大数は, 次のように制限される
+\begin{frame}{セグメント $\Phi_i$}
+    \begin{block}{セグメント $\Phi_i$}
+        \begin{itemize}
+            \item 1つのCPUコア上のチェーン $\Gamma^{c}$ の連続したサブセット
+            \item セグメント $\Phi_{i}$ は, $\Phi_{i}$ 内の最低優先度のコールバックから優先度が継承される単一のコールバックと見なされる
+            \item $\Phi_{i}$ の WCET は$\Phi_{i}$内の全てのコールバックの WCET の合計
+        \end{itemize}
+    \end{block}
+    \begin{itemize}
+        \item セグメントを単一のコールバックと見なせる理由は, $\Gamma^{c}$ のタイマコールバックがその周期に基づいて到着すると, 残りのコールバックはその前のコールバックの完了によって直接トリガーされるため
+        \item チェーンが複数のCPUコア上で実行される場合, 複数のセグメントに分解される
+    \end{itemize}
+\end{frame}
 
+\begin{frame}{$\eta_{i}\left(t, \tau_{k}\right)$}
+    $\eta_{i}\left(t, \tau_{k}\right)$ は, 任意の時間間隔 $t$ の間にターゲットセグメント $\Phi_{i} \subset \Gamma^{c}$ に干渉を引き起こすコールバック $\tau_{k} \in \Gamma^{c^{\prime}}$ の到着の最大数
+    \begin{block}{$\eta_{i}\left(t, \tau_{k}\right)$}
         \begin{equation*}
             \eta_{i}\left(t, \tau_{k}\right)= \begin{cases}{\left[\frac{t}{\mathcal{T}_{\Gamma^{c^{\prime}}}}\right]} & \text {, if } \pi_{\Gamma^{c^{\prime}}}>\pi_{\Gamma^{c}} \wedge P\left(\Phi_{i}\right)=P\left(\tau_{k}\right) \\ 0 &, \text { otherwise }\end{cases}
         \end{equation*}
 
-        ここで, $\Gamma^{c^{\prime}}$ の全てのコールバックが同じ $C P U$ 上にある場合は $\mathcal{T}_{\Gamma^{c^{\prime}}}=\max \left(T_{\Gamma^{c^{\prime}}}, \sum_{\tau_{j} \in \Gamma^{c^{\prime}}} C_{j}\right)$, それ以外の場合は $\mathcal{T}_{\Gamma^{c^{\prime}}}=T_{\Gamma^{c^{\prime}}}$
-        \item $T_{\Gamma^{c^{\prime}}}$ は $\Gamma^{c^{\prime}}$ の期間である
-        \item $P\left(\tau_{k}\right)$ は $\tau_{k}$ の $C P U$ コアである
-    \end{lemma}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item $\Gamma^{c^{\prime}}$ の全てのコールバックが同じ CPU 上にある場合は $\mathcal{T}_{\Gamma^{c^{\prime}}}=\max \left(T_{\Gamma^{c^{\prime}}}, \sum_{\tau_{j} \in \Gamma^{c^{\prime}}} C_{j}\right)$, それ以外の場合は $\mathcal{T}_{\Gamma^{c^{\prime}}}=T_{\Gamma^{c^{\prime}}}$
+            \item \desc{$T_{\Gamma^{c^{\prime}}}$}{$\Gamma^{c^{\prime}}$ の周期}
+            \item \desc{$P\left(\tau_{k}\right)$}{$\tau_{k}$ の CPU コア}
+        \end{itemize}
+    \end{block}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 2 番目のケースには, 最初のケースでは考慮されない他の全ての条件が含まれる
-        \item (i) $\pi_{\Gamma^{c^{\prime}}}>\pi_{\Gamma^{c}}$ と $\tau_{k}$ が異なるコア上にある場合, $\tau_{k}$ は自明に $\Phi_{i}$ に干渉を引き起こしない
-        \item (ii) $\pi_{\Gamma^{c^{\prime}}}=\pi_{\Gamma^{c}}$ の場合, $\tau_{k}$ と $\Phi_{i}$ は同じチェーンからのものであり, Lemma 1 によって互いに干渉しないことを意味する (iii) $\pi_{\Gamma^{c^{\prime}}}<\pi_{\Gamma^{c}}$ の場合, $\tau_{k}$ が優先度の高いエグゼキュータに存在できるかどうかを考慮する必要がある
-        \item $\Phi_{i}$ のエグゼキュータよりも
-    \end{itemize}
+\begin{frame}{$B_i$}
+    $B_i$ は, セグメント $\Phi_{i}$ の最大ブロック時間
+    \begin{block}{$B_i$}
+        \begin{equation*}
+            B_i=\max _{\substack{\forall j: \tau_j \in e\left(\Phi_i\right) \wedge \tau_j \notin \Gamma^c \\ \wedge \pi_j<\pi_i}}{C_j}
+        \end{equation*}
+
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item \desc{$e\left(\Phi_{i}\right)$}{$\Phi_{i}$ のエグゼキュータ}
+        \end{itemize}
+    \end{block}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item しかし, ストラテジー VI では, $\tau_{k}$ は $\Phi_{i}$ と同じかそれよりも優先度の低いエグゼキュータに割り当てられる
-        \item $\tau_{k}$ が優先順位の低いエグゼキュータにある場合, 自明に干渉は発生しない
-        \item $\tau_{k}$ が同じエグゼキュータにある場合, Alg によって $\Phi_{i}$ よりも優先順位が低くなる 1 であり, $\Phi_{i} ,  \tau_{k}$ への干渉遅延を引き起こすことはできない
-        \item この場合, $\Phi_{i} ,  \tau_{k}$ はブロッキング遅延を引き起こす可能性がある
-        \item これは, 別の用語を使用して個別にキャプチャされる
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    優先度の低いコールバックからのブロック時間
-    \item エグゼキュータ内のプリエンプティブでないスケジューリングの性質により, 優先順位の低いコールバックは, ターゲットセグメント $\Phi_{i}$ に対して最大 1 回のブロッキング遅延を引き起こす可能性がある
-    \item したがって, $\Phi_{i}$ の最大ブロック時間 $B_{i}$ は, 同じエグゼキュータ内の優先度の低いコールバック $\tau_{j}$ の最長実行時間によって制限され, 次の式で与えられる
-
-    ここで, $e\left(\Phi_{i}\right)$ は $\Phi_{i}$ のエグゼキュータである
-    Lemma 1 と式 (1) に基づきます
-\end{frame}
-
-\begin{frame}[label=lemma3]{Lemma 3}
-    \begin{lemma}[]
-        $R_{c, i}^{n}$ で示されるセグメント $\Phi_{i} \subset$  $\Gamma^{c}$ の最悪の場合の応答時間は, 次の繰り返しによって制限される
-
+\begin{frame}{$R_{c, i}^{n}$}
+    $R_{c, i}^{n}$ は, セグメント $\Phi_{i} \subset$  $\Gamma^{c}$ の最悪の場合の応答時間
+    \begin{block}{$R_{c, i}^{n}$}
+        \begin{equation*}
+            R_{c, i}^{0}=B_{i}+ \sum_{\forall j: \tau_{j} \in \Phi_{i}} C_{j}
+        \end{equation*}
         \begin{equation*}
             R_{c, i}^{n+1} \leftarrow B_{i}+\sum_{\forall j: \tau_{j} \in \Phi_{i}} C_{j}+\sum_{\substack{\forall: \tau_{k} \in e\left(\Phi_{i}\right) \vee \\ \tau_{k} \in e_{H P}}} \eta_{i}\left(R_{c, i}^{n}, \tau_{k}\right) \times C_{k}
         \end{equation*}
 
-        ここで, $e_{H P}$ は, $\Phi_{i}$ のエグゼキュータよりも優先度の高い一連のエグゼキュータである
-        \item 再発は $R_{c, i}^{0}=B_{i}+$  $\sum_{\forall j: \tau_{j} \in \Phi_{i}} C_{j}$ で始まる
-    \end{lemma}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item \desc{$e_{H P}$}{$\Phi_{i}$ のエグゼキュータよりも優先度の高い一連のエグゼキュータ}
+        \end{itemize}
+    \end{block}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item Lemma 3 は, チェーン $\Gamma^{c}$ のサブセットであるセグメント $\Phi_{i}$ の WCRT をキャプチャすることに注意
-        \item したがって, $\Phi_{i}=\left\{\tau_{j}\right\}$ を設定することにより, 単一のコールバック $\tau_{j}$ の WCRT を計算するためにも使用できる
-        \item この場合, 計算された $\tau_{j}$ の WCRT は, $\tau_{j}$ がトリガされてから実行が完了するまでの時間を表す
-    \end{itemize}
-\end{frame}
-
-
-\subsection{End-to-end latency of a chain $\Gamma^{c}$}
-\label{ssec: end-to-end latency of a chain gamma}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item 最後に, 提案されたチェーン対応スケジューリングフレームワークで, 特定のチェーンのエンドツーエンドのレイテンシを分析する
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item 前のチェーンインスタンスからの遅延
-        \item Lemma 1 の条件が満たされたときのチェーンインスタンスのスケジューリング動作を思い出してください
-        \item 次にリリースされたチェーンインスタンスは, 前のチェーンインスタンスの完了後にのみ実行を開始できるため, 次のインスタンスでは, 前のチェーンインスタンスからの追加のブロッキング遅延が発生する可能性がある
-    \end{itemize}
-\end{frame}
-
-\begin{frame}[label=lemma4]{Lemma 4}
-    \begin{lemma}[]
-        $S\left(\Gamma^{c}\right)$ で示されるチェーン $\Gamma^{c}$ の前のインスタンスによって引き起こされる最大ブロッキング遅延は, 次の式で与えられる
-
+\begin{frame}{$S\left(\Gamma^{c}\right)$}
+    $S\left(\Gamma^{c}\right)$ は, チェーン $\Gamma^{c}$ の前のインスタンスによって引き起こされる最大ブロッキングレイテンシ
+    \begin{block}{$S\left(\Gamma^{c}\right)$}
         \begin{equation*}
             S\left(\Gamma^{c}\right)= \begin{cases}0 &, \text { if } \sum_{\Phi_{i} \subset \Gamma^{c}} R_{c, i}^{n} \leq T_{\Gamma^{c}} \\ T_{\tau_{s}} &, \text { otherwise }\end{cases}
         \end{equation*}
 
-        ここで, $T_{\Gamma^{c}}$ は $\Gamma^{c}$ の期間である
-    \end{lemma}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item \desc{$T_{\Gamma^{c}}$}{$\Gamma^{c}$ の周期}
+        \end{itemize}
+    \end{block}
 \end{frame}
 
-\begin{frame}[label=theorem1]{Theorem 1}
-    \begin{theorem}[]
-        チェーン $\Gamma^{c}$ のエンドツーエンドレイテンシは, 次のように計算される
-
+\begin{frame}{チェーン $\Gamma^{c}$ のエンドツーエンドレイテンシ計算式}
+    \begin{block}{チェーン $\Gamma^{c}$ のエンドツーエンドレイテンシ $L_{\Gamma^{c}}$}
         \begin{equation*}
             L_{\Gamma^{c}} \leftarrow \sum_{\Phi_{i} \subset \Gamma^{c}} R_{c, i}^{n}+S\left(\Gamma^{c}\right)
         \end{equation*}
-
-        ここで, $\Phi_{i}$ はチェーン $\Gamma^{c}$ のセグメントである
-    \end{theorem}
+    \end{block}
 \end{frame}
+
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item 分析の目的で, 1 つの CPU コア (セグメント $\Phi_{i}$ と呼ばれる) 上のチェーン $\Gamma^{c}$ の連続したサブセットは, 単一の人為的なコールバックと見なすことができる
+%         \item これは, $\Gamma^{c}$ のタイマコールバックがその期間に基づいて到着すると, 残りのコールバックが前のコールバックの完了によって直接トリガされ, それらの間に自己誘発レイテンシがないためである
+%         \item チェーンが複数の CPU コアで実行される場合, 複数のセグメントに分解できる
+%         \item したがって, チェーンのエンドツーエンドの分析は, (i) チェーンの各セグメントの最悪の場合の応答時間 (WCRT) を計算し, (ii) 全てのセグメントの WCRT を合計するという 2 つのステップで実行できる
+%         \item 指定されたチェーンの図 6 は, 3 つのセグメントを持つチェーンの例を示している
+%         \item 各ステップを提示し, 分析がどのように行われるかを説明する
+%     \end{itemize}
+% \end{frame}
+
+% \subsection{Worst-case response time of a segment $\Phi_{i}$}
+% \label{ssec: worst-case response time of a segment phi}
+
+% \begin{frame}{セクションサマリ}
+%     \begin{itembox}[l]{\textbf{目的}}
+%         チェーンの各セグメントの WCRT を計算する
+%     \end{itembox}
+% \end{frame}
+
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item セグメント $\Phi_{i}$ は, 優先度が $\Phi_{i}$ の最低優先度のコールバックから継承される単一の人為的なコールバックと見なされ, その WCET はそのセグメント内の全てのコールバックの WCET の合計である
+%     \end{itemize}
+% \end{frame}
+
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item より高いセマンティック優先度チェーンからの干渉
+%         \item ターゲットセグメント $\Phi_{i}$ の WCRT を分析するには, 他のコールバックによって課される最大干渉の上界を設定する必要がある
+%         \item 本論文のフレームワークでは, そのようなコールバックは, 同じ CPU 上の $\Phi_{i}$ のエグゼキュータより優先度の高いエグゼキュータで実行されるか, $\Phi_{i}$ と同じエグゼキュータで優先度の高いコールバックである
+%         \item これらを考慮して, 次のLemmaは, 任意の時間間隔 $t$ に対する干渉コールバック $\tau_{k}$ の最大到着数をキャプチャする
+%     \end{itemize}
+% \end{frame}
+
+% \begin{frame}[label=lemma2]{Lemma 2}
+%     \begin{lemma}[]
+%         任意の時間枠 $t$ の間にターゲットセグメント $\Phi_{i} \subset \Gamma^{c}$ に干渉を引き起こすコールバック $\tau_{k} \in \Gamma^{c^{\prime}}$ の到着の最大数は, 次のように制限される
+
+%         \begin{equation*}
+%             \eta_{i}\left(t, \tau_{k}\right)= \begin{cases}{\left[\frac{t}{\mathcal{T}_{\Gamma^{c^{\prime}}}}\right]} & \text {, if } \pi_{\Gamma^{c^{\prime}}}>\pi_{\Gamma^{c}} \wedge P\left(\Phi_{i}\right)=P\left(\tau_{k}\right) \\ 0 &, \text { otherwise }\end{cases}
+%         \end{equation*}
+
+%         \begin{itemize}
+%             \item ここで, $\Gamma^{c^{\prime}}$ の全てのコールバックが同じ $C P U$ 上にある場合は $\mathcal{T}_{\Gamma^{c^{\prime}}}=\max \left(T_{\Gamma^{c^{\prime}}}, \sum_{\tau_{j} \in \Gamma^{c^{\prime}}} C_{j}\right)$, それ以外の場合は $\mathcal{T}_{\Gamma^{c^{\prime}}}=T_{\Gamma^{c^{\prime}}}$
+%             \item $T_{\Gamma^{c^{\prime}}}$ は $\Gamma^{c^{\prime}}$ の期間である
+%             \item $P\left(\tau_{k}\right)$ は $\tau_{k}$ の $C P U$ コアである
+%         \end{itemize}
+%     \end{lemma}
+% \end{frame}
+
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item 2 番目のケースには, 最初のケースでは考慮されない他の全ての条件が含まれる
+%         \item (i) $\pi_{\Gamma^{c^{\prime}}}>\pi_{\Gamma^{c}}$ と $\tau_{k}$ が異なるコア上にある場合, $\tau_{k}$ は自明に $\Phi_{i}$ に干渉を引き起こしない
+%         \item (ii) $\pi_{\Gamma^{c^{\prime}}}=\pi_{\Gamma^{c}}$ の場合, $\tau_{k}$ と $\Phi_{i}$ は同じチェーンからのものであり, Lemma 1 によって互いに干渉しないことを意味する (iii) $\pi_{\Gamma^{c^{\prime}}}<\pi_{\Gamma^{c}}$ の場合, $\tau_{k}$ が優先度の高いエグゼキュータに存在できるかどうかを考慮する必要がある
+%         \item $\Phi_{i}$ のエグゼキュータよりも
+%     \end{itemize}
+% \end{frame}
+
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item しかし, ストラテジー VI では, $\tau_{k}$ は $\Phi_{i}$ と同じかそれよりも優先度の低いエグゼキュータに割り当てられる
+%         \item $\tau_{k}$ が優先度の低いエグゼキュータにある場合, 自明に干渉は発生しない
+%         \item $\tau_{k}$ が同じエグゼキュータにある場合, Alg によって $\Phi_{i}$ よりも優先度が低くなる 1 であり, $\Phi_{i} ,  \tau_{k}$ への干渉レイテンシを引き起こすことはできない
+%         \item この場合, $\Phi_{i} ,  \tau_{k}$ はブロッキングレイテンシを引き起こす可能性がある
+%         \item これは, 別の用語を使用して個別にキャプチャされる
+%     \end{itemize}
+% \end{frame}
+
+% \begin{frame}{}
+%     優先度の低いコールバックからのブロック時間
+%     \begin{itemize}
+%         \item エグゼキュータ内のプリエンプティブでないスケジューリングの性質により, 優先度の低いコールバックは, ターゲットセグメント $\Phi_{i}$ に対して最大 1 回のブロッキングレイテンシを引き起こす可能性がある
+%         \item したがって, $\Phi_{i}$ の最大ブロック時間 $B_{i}$ は, 同じエグゼキュータ内の優先度の低いコールバック $\tau_{j}$ の最長実行時間によって制限され, 次の式で与えられる
+%     \end{itemize}
+
+%     ここで, $e\left(\Phi_{i}\right)$ は $\Phi_{i}$ のエグゼキュータである
+%     Lemma 1 と式 (1) に基づきます
+% \end{frame}
+
+% \begin{frame}[label=lemma3]{Lemma 3}
+%     \begin{lemma}[]
+%         $R_{c, i}^{n}$ で示されるセグメント $\Phi_{i} \subset$  $\Gamma^{c}$ の最悪の場合の応答時間は, 次の繰り返しによって制限される
+
+%         \begin{equation*}
+%             R_{c, i}^{n+1} \leftarrow B_{i}+\sum_{\forall j: \tau_{j} \in \Phi_{i}} C_{j}+\sum_{\substack{\forall: \tau_{k} \in e\left(\Phi_{i}\right) \vee \\ \tau_{k} \in e_{H P}}} \eta_{i}\left(R_{c, i}^{n}, \tau_{k}\right) \times C_{k}
+%         \end{equation*}
+
+%         \begin{itemize}
+%             \item ここで, $e_{H P}$ は, $\Phi_{i}$ のエグゼキュータよりも優先度の高い一連のエグゼキュータである
+%             \item 再発は $R_{c, i}^{0}=B_{i}+$  $\sum_{\forall j: \tau_{j} \in \Phi_{i}} C_{j}$ で始まる
+%         \end{itemize}
+%     \end{lemma}
+% \end{frame}
+
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item Lemma 3 は, チェーン $\Gamma^{c}$ のサブセットであるセグメント $\Phi_{i}$ の WCRT をキャプチャすることに注意
+%         \item したがって, $\Phi_{i}=\left\{\tau_{j}\right\}$ を設定することにより, 単一のコールバック $\tau_{j}$ の WCRT を計算するためにも使用できる
+%         \item この場合, 計算された $\tau_{j}$ の WCRT は, $\tau_{j}$ がトリガされてから実行が完了するまでの時間を表す
+%     \end{itemize}
+% \end{frame}
+
+
+% \subsection{End-to-end latency of a chain $\Gamma^{c}$}
+% \label{ssec: end-to-end latency of a chain gamma}
+
+% \begin{frame}{セクションサマリ}
+%     \begin{itembox}[l]{\textbf{目的}}
+%         提案されたチェーン対応スケジューリングフレームワークで, 特定のチェーンのエンドツーエンドのレイテンシを分析する
+%     \end{itembox}
+% \end{frame}
+
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item 前のチェーンインスタンスからのレイテンシ
+%         \item Lemma 1 の条件が満たされたときのチェーンインスタンスのスケジューリング動作を思い出してください
+%         \item 次にリリースされたチェーンインスタンスは, 前のチェーンインスタンスの完了後にのみ実行を開始できるため, 次のインスタンスでは, 前のチェーンインスタンスからの追加のブロッキングレイテンシが発生する可能性がある
+%     \end{itemize}
+% \end{frame}
+
+% \begin{frame}[label=lemma4]{Lemma 4}
+%     \begin{lemma}[]
+%         $S\left(\Gamma^{c}\right)$ で示されるチェーン $\Gamma^{c}$ の前のインスタンスによって引き起こされる最大ブロッキングレイテンシは, 次の式で与えられる
+
+%         \begin{equation*}
+%             S\left(\Gamma^{c}\right)= \begin{cases}0 &, \text { if } \sum_{\Phi_{i} \subset \Gamma^{c}} R_{c, i}^{n} \leq T_{\Gamma^{c}} \\ T_{\tau_{s}} &, \text { otherwise }\end{cases}
+%         \end{equation*}
+
+%         ここで, $T_{\Gamma^{c}}$ は $\Gamma^{c}$ の期間である
+%     \end{lemma}
+% \end{frame}
+
+% \begin{frame}[label=theorem1]{Theorem 1}
+%     \begin{theorem}[]
+%         チェーン $\Gamma^{c}$ のエンドツーエンドレイテンシは, 次のように計算される
+
+%         \begin{equation*}
+%             L_{\Gamma^{c}} \leftarrow \sum_{\Phi_{i} \subset \Gamma^{c}} R_{c, i}^{n}+S\left(\Gamma^{c}\right)
+%         \end{equation*}
+
+%         ここで, $\Phi_{i}$ はチェーン $\Gamma^{c}$ のセグメントである
+%     \end{theorem}
+% \end{frame}
