--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/priority_driven_chain_aware_scheduling.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/priority_driven_chain_aware_scheduling.tex
@@ -3,224 +3,289 @@
 \section{PRIORITY-DRIVEN CHAIN-AWARE SCHEDULING}
 \label{sec: priority-driven chain-aware scheduling}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item このセクションでは, PiCAS と呼ばれる, ROS2 用の優先度駆動型のチェーン対応スケジューリングフレームワークを紹介する
-        \item チェーンのエンドツーエンドのレイテンシを改善するために, 現在の ROS2 スケジューリングアーキテクチャは, 次の考慮事項を考慮して再設計できる
-        \item (1) 優先度の高いチェーンは優先度の低いチェーンよりも早く実行する必要がある (図 2a, および (2)) チェーンごとに, チェーンの前のインスタンスは, 新しくリリースされたインスタンスが同じ CPU でスケジュールされている場合, 実行を開始する前に実行を完了する必要がある (図 2b) 後者は, 同じチェーンのインスタンス間の自己干渉を減らすためである
-        \item 上記の考慮事項に基づいて, 次のLemmaでスケジューラに必要なプロパティを示す
-    \end{itemize}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        PiCAS と呼ばれる, ROS2 用の優先度駆動型のチェーン対応スケジューリングフレームワークを紹介する
+    \end{itembox}
+\end{frame}
+
+\begin{frame}{ROS2 スケジューリングアーキテクチャ再設計の観点}
+    チェーンのエンドツーエンドのレイテンシを改善するために, 現在の ROS2 スケジューリングアーキテクチャは, 以下2つを考慮して再設計できる
+    \begin{enumerate}
+        \item 優先度の高いチェーンは, 優先度の低いチェーンより早く実行されること
+        \item 各チェーンにおいて, 新しくリリースされたインスタンスが同じCPUにスケジューリングされている場合, チェーンの先行インスタンスが実行を開始する前にその実行を完了する必要がある
+    \end{enumerate}
 \end{frame}
 
 \begin{frame}[label=lemma1]{Lemma 1}
+    Lemma 1 はスケジューラに必要なプロパティを示す
     \begin{lemma}[]
-        コールバックが同じ $C P U$ 上にあるチェーン $\Gamma^{c}:=\left[\tau_{1}, \ldots \tau_{i}, \ldots, \tau_{j}, \ldots, \tau_{N}\right]$ の場合, 次の条件が満たされる場合, 新しいインスタンスが実行を開始する前に, 前のチェーンインスタンスがその実行を完了することが保証される
-        \item (2) $\tau_{j}$ は,  $\tau_{i}$ のエグゼキュータと同じかそれ以上の優先度を持つエグゼキュータで実行される
+        チェーン $\Gamma^{c}:=\left[\tau_{1}, \ldots \tau_{i}, \ldots, \tau_{j}, \ldots, \tau_{N}\right]$ について, コールバックが同じ CPU 上にある時, 以下2つの条件が満たされれば, 新しいインスタンスが実行を開始する前に, 前のチェーンインスタンスがその実行を完了することが保証される
+        \begin{enumerate}
+            \item $\tau_{j}$が$\tau_{i}$より高いコールバック優先度を持つ（$\tau_{j} > \tau_{i}$）
+            \item $\tau_{j}$が$\tau_{i}$のエグゼキュータと同じか高い優先度を持つエグゼキュータで実行される
+        \end{enumerate}
     \end{lemma}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{Lemma 1が示すこと}
     \begin{itemize}
-        \item 特定のチェーン $\Gamma^{c}$ のコールバックが複数の CPU コアに分散されている場合, そのチェーンの新しいインスタンスは, 前のインスタンスの完了よりも早く開始される可能性があることに注意
-        \item しかし, Lemma 1 は, 1 つの CPU コアに割り当てられた $\Gamma^{c}$ の連続するサブセットに適用される
-        \item レンマの条件により, 対応するインスタンスのサブセットが到着順に実行されることが保証される
-        \item したがって, $\Gamma^{c}$ のインスタンスは, 将来のインスタンスから干渉を受けません
+        \item Lemma 1 は, 1 つの CPU コアに割り当てられた $\Gamma^{c}$ の連続するサブセットに適用される
+        \item Lemmaの条件により, 対応するインスタンスのサブセットが到着順に実行されることが保証される
+        \item したがって, $\Gamma^{c}$ のインスタンスは, 後続のインスタンスから干渉を受けない
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item Lemma 1 に基づいて, このセクションの残りの部分では, 最初に 2 つの側面を考慮したスケジューリングポリシーの概要を説明する
-        \item エグゼキュータ内で実行されるチェーン (セクション V-A) とエグゼキュータ間で実行されるチェーン (セクション V-B.
-        \item ) 次に, 提案されたコールバック優先順位の割り当て (セクション V-C)およびこれらの戦略を実現するチェーン認識ノード割り当て（セクションV-D）アルゴリズム
-    \end{itemize}
+\begin{frame}{以降の流れ}
+    \begin{enumerate}
+        \item エグゼキュータ内で実行されるチェーンとエグゼキュータ間で実行されるチェーンの二つの側面を考慮して, スケジューリングポリシーの概要を説明する
+        \item これらの戦略を実現するコールバック優先度割り当ておよびチェーンを考慮したノード割り当てアルゴリズムを提案する
+    \end{enumerate}
 \end{frame}
 
 
 \subsection{Strategies for chains running within an executor}
 \label{ssec: strategies for chains running within an executor}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 最初に, エグゼキュータ内で実行されるチェーンの戦略について説明する
-        \item これらの戦略は, そのようなチェーンのコールバックがエグゼキュータでスケジュールされる方法に影響を与え, 図 3 に示すチェーンとコールバックの分類から派生する
-        \item 各戦略はカテゴリの 1 つにマップされる
-        \item コールバックスケジューリングは, ノード構成 (プログラムコードによって与えられる) およびノードからエグゼキュータへの割り当て (セクション V-D のアルゴリズムによって決定される) と直交することに注意
-        \item これは, ノードのコールバックがエグゼキュータに割り当てられると, それぞれがexecutor は, 元のノードに関係なく, 割り当てられたコールバックを処理する
-    \end{itemize}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        1つのエグゼキュータ内で実行されるチェーンの戦略について説明する
+    \end{itembox}
 \end{frame}
-
-\begin{frame}{戦略 I}
-    \begin{itemize}
-        \item 単一チェーンからの通常のコールバック
-        \item エグゼキュータが単一のチェーン $\Gamma^{c}=:\left[\tau_{1}, \ldots, \tau_{i}, \ldots, \tau_{j}, \ldots, \tau_{N}\right]$ からの通常のコールバックのみを持っている場合, これらのコールバックの優先度は, チェーン内の順序とは逆の順序で割り当てる必要がある
-        \item すなわち, $\tau_{j}(j>i)$ は $\tau_{i}$ よりも高い優先度を取得して, 最初の条件Lemma 1.
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{戦略Ⅱ}
-    \begin{itemize}
-        \item  1 つのチェーンからのタイマと通常のコールバック
-        \item エグゼキュータに単一チェーン $\Gamma^{c}$ のタイマと通常のコールバックの両方が含まれる場合, Lemma 1 の最初の条件を満たすために, 通常のコールバックにタイマコールバックよりも高い優先順位を与える必要がある (タイマはチェーン内の他の全ての通常のコールバックよりも前に配置されるため)
-        \item
-        \item 通常のコールバックのスケジューリングは, 戦略 I に従う必要がある
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{戦略Ⅲ}
-    \begin{itemize}
-        \item 複数のチェーンからの通常のコールバック
-        \item $\Gamma^{c}$ と $\Gamma^{c^{\prime}}$ という 2 つのチェーンを考えてみよう
-        \item $\pi_{\Gamma^{c}}<\pi_{\Gamma^{c^{\prime}}}$ (すなわち,  $\Gamma^{c^{\prime}}$ は $\Gamma^{c}$ よりもセマンティックな優先順位が高い)
-        \item エグゼキュータに $\Gamma^{c}$ と $\Gamma^{c^{\prime}}$ の両方からの通常のコールバックが含まれている場合, $\Gamma^{c^{\prime}}$ の全てのコールバックには, $\Gamma^{c}$ のコールバックよりも高い優先度を割り当てる必要がある
-        \item さらに, 各チェーンのコールバックの優先順位の割り当ては, 個別に戦略 I に従う必要がある
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{戦略Ⅳ}
-    \begin{itemize}
-        \item 複数のチェーンからのタイマおよび通常のコールバック
-        \item エグゼキュータに複数のチェーンからのタイマコールバックと通常のコールバックの両方が含まれている場合 (たとえば,  $\Gamma^{c}$ と $\Gamma^{c^{\prime}}$ の場合,  $\pi_{\Gamma^{c}}<$  $\pi_{\Gamma^{c^{\prime}}}$ ), セマンティック優先度の高いチェーン $\left(\Gamma^{c^{\prime}}\right)$ からのタイマコールバックは, セマンティック優先度の低いチェーン $\left(\Gamma^{c}\right)$ からのタイマコールバックよりも高い優先度を持つ必要がある
-        \item タイマコールバックは各チェーンインスタンスの開始点であるため, このような優先順位付けにより, 重要度の高いチェーンインスタンスが重要度の低いインスタンスよりも優先される
-        \item 次に, 各チェーンは, Lemma 1 に準拠するために個別に戦略 II に従う必要がある
-    \end{itemize}
-\end{frame}
-
-
-\subsection{Strategies for chains running across executors}
-\label{ssec: strategies for chains running across executors}
 
 \begin{frame}{}
+    \fitimage{
+        戦略を図に示すチェーンとコールバックの分類から導き出す
+    }{strategies_classification.png}
+\end{frame}
+
+\begin{frame}[label=strategy1]{[戦略 I] 単一チェーンからのレギュラーコールバック}
+    戦略 I は $\tau_{j}$ に $\tau_{i}$ よりも高い優先度を与えることで, Lemma 1 の最初の条件を満たすようにする
+    \begin{block}{戦略 I}
+        エグゼキュータが単一のチェーン $\Gamma^{c}=:\left[\tau_{1}, \ldots, \tau_{i}, \ldots, \tau_{j}, \ldots, \tau_{N}\right]$ からのレギュラーコールバックのみを持っている場合, これらのコールバックの優先度は, チェーン内の順序とは逆の順序で割り当てる
+    \end{block}
+\end{frame}
+
+\begin{frame}[label=strategy2]{[戦略 II] 1 つのチェーンからのタイマ・レギュラーコールバック}
+    あるチェーンにおいてレギュラーコールバックはタイマコールバックよりも後ろに存在するため, 戦略 II は Lemma 1 の最初の条件を満たすようにする
+    \begin{block}{戦略 II}
+        エグゼキュータに単一チェーン $\Gamma^{c}$ のタイマ・レギュラーコールバックの両方が含まれる場合, レギュラーコールバックにタイマコールバックよりも高い優先度を与える
+        \notes{レギュラーコールバックのスケジューリングは, 戦略 I に従う}
+    \end{block}
+\end{frame}
+
+\begin{frame}[label=strategy3]{[戦略 III] 複数のチェーンからのレギュラーコールバック}
     \begin{itemize}
-        \item 次に, 複数のエグゼキュータ間で実行されるチェーンのスケジューリングポリシーについて説明する
+        \item 戦略 III は Lemma 1 の2番目の条件を満たすようにする
+        \item $\pi_{\Gamma^{c}}<\pi_{\Gamma^{c^{\prime}}}$ である2つのチェーン $\Gamma^{c}$, $\Gamma^{c^{\prime}}$ を考える
+    \end{itemize}
+    \begin{block}{戦略 III}
+        エグゼキュータに $\Gamma^{c}$ と $\Gamma^{c^{\prime}}$ の両方からのレギュラーコールバックが含まれている場合, $\Gamma^{c^{\prime}}$ の全てのコールバックには, $\Gamma^{c}$ のコールバックよりも高い優先度を割り当てる
+        \notes{各チェーンのコールバックの優先度の割り当ては, 戦略 I に従う}
+    \end{block}
+\end{frame}
+
+\begin{frame}[label=strategy4]{[戦略 IV] 複数のチェーンからのタイマ・レギュラーコールバック}
+    戦略 IV は重要度の高いチェーンインスタンスが重要度の低いインスタンスよりも優先されるようにする
+    \begin{block}{戦略 IV}
+        優先度の高いチェーンからのタイマコールバックは, 優先度の低いチェーンからのタイマコールバックよりも高い優先度を割り当てる
+        \notes{各チェーンは, Lemma 1 に準拠するために個別に戦略 II に従う}
+    \end{block}
+\end{frame}
+
+
+\subsection{Strategies for chains running across executor}
+\label{ssec: strategies for chains running across executor}
+
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        複数のエグゼキュータ間で実行されるチェーンのスケジューリングポリシーについて説明する
+    \end{itembox}
+\end{frame}
+
+\begin{frame}{}
+    \begin{itemize}
         \item 各エグゼキュータは 1 つの CPU コアに割り当てられ, OS のプリエンプティブな固定優先度スケジューラによってスケジュールされるため, 複数のエグゼキュータが割り当てられている可能性がある各 CPU でチェーンスケジューリングを考慮する必要がある
-        \item 次の 2 つの戦略は, セクション 2 の割り当てアルゴリズムの基礎として機能する
-        \item V-D ここでのエグゼキュータは, セクション V-A で指定された戦略 I から IV に従うと想定されていることに注意
+        \item エグゼキュータは 戦略 I から IV に従うとする
     \end{itemize}
 \end{frame}
 
-\begin{frame}{戦略 V}
-    \begin{itemize}
-        \item 1 つの CPU に 1 つのチェーン
-        \item CPU が 1 つのチェーン $\Gamma^{c}$ からのコールバックのみを持っているとする
-        \item この場合, $\Gamma^{c}$ の低インデックスコールバック $\tau_{i}$ を含むエグゼキュータは, $\Gamma^{c}$ の高インデックスコールバック $\tau_{j}(j>i)$ を実行する同じ CPU 上の他のエグゼキュータと同じか, それより低い優先度を持つ必要がある
-        \item これは, Lemma 1 の 2 番目の条件を満たすためである
-    \end{itemize}
+\begin{frame}{[戦略 V] 1 つの CPU に 1 つのチェーン}
+    戦略 V は Lemma 1 の 2 番目の条件を満たすようにする
+    \begin{block}{戦略 V}
+        CPU が 1 つのチェーン $\Gamma^{c}$ からのコールバックのみを持っている場合, $\Gamma^{c}$ の低インデックスコールバック $\tau_{i}$ を含むエグゼキュータは, $\Gamma^{c}$ の高インデックスコールバック $\tau_{j}$ を実行する同じ CPU 上の他のエグゼキュータと同じか, それより低い優先度を割り当てる
+    \end{block}
 \end{frame}
 
-\begin{frame}{戦略Ⅵ}
+\begin{frame}{[戦略 VI]  1 つの CPU に複数のチェーン}
     \begin{itemize}
-        \item 1 つの CPU に複数のチェーン
-        \item CPU に複数のチェーンからのコールバックがあるとする (たとえば,  $\pi_{\Gamma^{c}}<\pi_{\Gamma^{c^{\prime}}}$ がある同じ CPU 上の $\Gamma^{c}$ および $\Gamma^{c^{\prime}}$ )
-        \item この場合, $\Gamma^{c^{\prime}}$ のコールバックを含むエグゼキュータは, チェーンのセマンティック優先度を尊重するために, 少なくとも $\Gamma^{c}$ のコールバックを含むエグゼキュータと同じかそれ以上の優先度を持つ必要がある
+        \item 戦略 VI はチェーンの優先度を守らせる
+        \item $\pi_{\Gamma^{c}}<\pi_{\Gamma^{c^{\prime}}}$ である同じ CPU 上の2つのチェーン $\Gamma^{c}$, $\Gamma^{c^{\prime}}$ を考える
     \end{itemize}
+    \begin{block}{戦略 VI}
+        CPU に複数のチェーンからのコールバックがある場合, $\Gamma^{c^{\prime}}$ のコールバックを含むエグゼキュータは, 少なくとも $\Gamma^{c}$ のコールバックを含むエグゼキュータと同じかそれ以上の優先度を割り当てる
+    \end{block}
 \end{frame}
 
 
 \subsection{Priority assignment of callbacks}
 \label{ssec: priority assignment of callbacks}
 
-\begin{frame}{}
-    前述のスケジューリングポリシーを実現するために, まずこのサブセクションでコールバック優先度割り当てアルゴリズムを提案する
-    \item 本論文のアルゴリズムは, 各エグゼキュータ内のコールバックがストラテジー I から IV を実装できるようにし, Alg で提供される
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        前述のスケジューリングポリシーを実現するために, コールバック優先度割り当てアルゴリズムを提案する
+    \end{itembox}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 提案されたアルゴリズムは, 優先順位をコールバックに割り当てるために階層的なアプローチを採用し, 最初にオリジンチェーンのセマンティック優先順位を考慮し, 次に各チェーン内の相対的な優先順位を考慮する
-        \item アルグで 1 チェーンはセマンティック優先度の昇順でソートされ (1 行目), 外側のループはセマンティック優先度が最も低いチェーンから反復される (3 行目
-        \item セクション III-C のチェーンモデルによる)
-        \item 各チェーンのコールバックは次のとおりである開始 (低インデックス) コールバックから終了 (高インデックス) コールバックまで既に配置されている
-        \item したがって, 内側のループは, チェーン $\Gamma^{c}$ (行 4 から行 7) ごとに低いインデックスを持つコールバックに低い優先度を割り当てる
-        \item すなわち, タイマコールバックはチェーン内で最低の優先度を取得し, 終了コールバックは最高の優先度を取得する
-    \end{itemize}
-    \notes{(*1): 1 つのノードを分割して複数の CPU に割り当てるには, ノードのソフトウェアコードを書き換える必要があるが, 本論文の範囲を超えている}
+\begin{frame}{コールバック優先度割り当ての方針}
+    提案アルゴリズムは, コールバックに優先度を割り当てるために, まずその起点となるチェーンの優先度を考慮し, 次に各チェーン内の相対的な優先度を考慮するという階層的なアプローチを取る
+\end{frame}
+
+\begin{frame}{コールバック優先度割り当てアルゴリズム全体像}
+    \fullimage{alg1}
+\end{frame}
+
+\begin{frame}{コールバック優先度割り当てアルゴリズム補足}
+    \fullimage{alg1_sup.jpg}
 \end{frame}
 
 
 \subsection{Chain-aware node allocation scheme}
 \label{ssec: chain-aware node allocation scheme}
 
-\begin{frame}{}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        ROS2 のチェーン対応ノード割り当てスキームを提案する
+    \end{itembox}
+\end{frame}
+
+\begin{frame}{提案スキームの方針}
     \begin{itemize}
-        \item このサブセクションでは, ROS2 のチェーン対応ノード割り当てスキームを紹介する
-        \item 提案されたスキームは, 指定されたノードをエグゼキュータに割り当て, 次に, 前述のスケジューリングポリシーに従いながら, これらのエグゼキュータを使用可能な CPU コアにマップする
-        \item この方式では, 1 つのチェーンに関連付けられている全てのノードを可能な限り同じ CPU コアに割り当てることで, チェーン間の干渉を最小限に抑えようとする
-        \item 割り当てスキームはオフラインで行われるため, 実行時のオーバヘッドは発生しない
-        \item ノードは, ROS2 I のモジュール性と機能の論理分割のためにプログラマーによって構成されているため, リソース割り当てアルゴリズムによってノードを任意に分割できないことに注意する価値がある
-        \item ノードはメッセージによって明示的に行われ, 使用するエグゼキュータに関係なく変更されない
+        \item 提案されたスキームは, 指定されたノードをエグゼキュータに割り当て, 前述のスケジューリングポリシーに従いながら, これらのエグゼキュータを使用可能な CPU コアに割り当てる
+        \item この方式では, 1つのチェーンに関連する全てのノードを可能な限り同じCPUコアに割り当てることで, チェーン間の干渉を最小化しようとする
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{提案スキームにおける注意点}
     \begin{itemize}
-        \item 図 5 は, 提案されたノード割り当て方式のフロー図を示している
-        \item このスキームは, $(\mathrm{M})$ を使用するエグゼキュータの最大数, 使用可能な CPU コアの数 $(\mathrm{P})$, および割り当てられるノードのセット $(\mathcal{N})$ を入力として受け取る
-        \item 最初に, $\mathcal{N}$ 内のノードを, 各ノードに含まれる最も優先度の高いコールバックの降順で並べ替えます
+        \item この割り当て方式はオフラインで実行されるため, 実行時のオーバヘッドは発生しない
+        \item また, ノード間の通信はメッセージによって明示的に行われ, どのエグゼキュータを使用しても変わらないため, ノード間のデータ依存関係はノード割り当てに影響されない
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{フローで使用する表記法}
+    \full{
+        \begin{table}[tb]
+            \adjustbox{max width=\textwidth, max height=\slideheight}{
+                \centering\begin{tabular}{|c|l|} \hline
+                    $\mathcal{N} $                        & ノードセット                                          \\\hline
+                    $\Gamma^{c}$                          & まだ割り当てられていない最高優先度のチェーン          \\\hline
+                    $\mathbb{N}$ $(U_{\mathbb{N}} \ge 1)$ & チェーン $\Gamma^c$ のコールバックを含むノードセット  \\\hline
+                    $n$ $(n \in \mathbb{N})$              & $\Gamma^c$ の最も低い優先度のコールバックを含むノード \\\hline
+                    $e_e$                                 & 空のエグゼキュータ                                    \\\hline
+                    $e_m$                                 & 空でないエグゼキュータ                                \\\hline
+                    $M$                                   & $e_m$の数                                             \\\hline
+                    $P_k$                                 & CPU コア                                              \\\hline
+                    $U_{P_k}$                             & CPU コア $P_k$ の利用率                               \\\hline
+                    $P$                                   & $P_k$の数                                             \\\hline
+                \end{tabular}
+            }
+        \end{table}
+    }
+\end{frame}
+
+\begin{frame}{提案スキームのフロー全体像}
+    \fullimage{proposed_schema.png}
+\end{frame}
+
+\begin{frame}{提案スキームの入力}
+    提案スキームは以下を入力として受け取る
+    \begin{itemize}
+        \item $(\mathrm{M})$: 使用するエグゼキュータの最大数,
+        \item $(\mathrm{P})$: 使用可能な CPU コアの数
+        \item $(\mathcal{N})$: 割り当てられるノードのセット
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{提案スキームの前処理}
+    \begin{itemize}
+        \item 最初に, $\mathcal{N}$ 内のノードを, 各ノードに含まれる最も優先度の高いコールバックの降順で並べ替える
         \item これは, セマンティック優先度の高いチェーンに関連付けられたノードが最初に割り当てられることを意味する
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{提案スキーム概要}
     \begin{itemize}
-        \item $\Gamma^{c}$ を使用して, まだ割り当てられていない最高のセマンティックプライオリティチェーンを示す (したがって, 関連するノードは $\mathcal{N}$ にある)
-        \item このスキームは, $\Gamma^{c}$ に関連付けられた全てのノードがフェッチされるか, $\mathbb{N}$ の利用率が 1 を超えるまで, 一度に 1 つずつ $\mathcal{N}$ からノードをフェッチすることによって, ノードのサブセット $\mathbb{N}$ を選択する
-        \item 次に, スキームは空のエグゼキュータ $e_{e}$ があるかどうかをチェックし, 3 つの部分で構成される実際の割り当てフェーズに進みます
-        \item パート A では, $\mathbb{N}$ を $e_{e}$ に, $e_{e}$ を実行可能な CPU コアに割り当てる
-        \item パート B は, $e_{e}$ が存在しない場合である
-        \item $\mathbb{N}$ に実行可能な空でないエグゼキュータ $e_{m}$ を見つける
-        \item パート $\mathrm{C}$ は, 最初の 2 つのパートでエグゼキュータに割り当てられなかった全ての残りのノードを処理する
-        \item 各パーツの詳細は以下の通りである
+        \item 提案スキームは, $\Gamma^{c}$ に関連付けられた全てのノードがフェッチされるか, $\mathbb{N}$ の利用率が 1 を超えるまで, $\mathcal{N}$ からノードを１つずつフェッチして, ノードのサブセット $\mathbb{N}$ を選択する
     \end{itemize}
 \end{frame}
 
-\begin{frame}{パート A}
-    \begin{itemize}
-        \item スキームのこの部分は, 空のエグゼキュータ $e_{e}$ があるときに始まる
-        \item $\mathbb{N}$ を $e_{e}$ に割り当て, $e_{e}$ を含む利用率が 1 を超えない実行可能な全ての CPU コア $P_{k}$, すなわち $U_{e_{e}}+U_{P_{k}} \leq 1$ を見つける
-        \item そのような CPU コアが見つからない場合, スキームは, $\mathbb{N}$ からの最も優先度の低いコールバックを含むノード $n$ を削除し, $n$ を $\mathcal{N}$ に送り返し (再検討できるように), $\mathbb{N}$ に実行可能な CPU が残るまで再度見つける
-        \item $\mathbb{N}$ のノード
-        \item $\mathbb{N}$ にノードが 1 つしかなく, 実行可能な CPU が見つからない場合, $\mathbb{N}$ は, 検出された全ての実行可能な CPU の中で, 利用率が最も低く, 戦略 V および VI を満たす CPU に割り当てられる
-        \item これらの戦略を満たすものがない場合, $\mathbb{N}$ は Part $\mathrm{C}$ として処理される
-        \item 各エグゼキュータには, SCHED\_FIFO ポリシーの下で 1 から 99 の範囲の一意の OS レベルのリアルタイム優先度があり, 優先度が最も高い空のエグゼキュータが最初に使用されることに注意
-    \end{itemize}
+\begin{frame}{提案スキームの3パート概要}
+    \begin{block}{パート A}
+        $\mathbb{N}$ を $e_{e}$ に, $e_{e}$ を実行可能な CPU コアに割り当てる
+    \end{block}
+    \begin{block}{パート B}
+        $e_{e}$ が存在しない場合に, $\mathbb{N}$ に対して実行可能な空でないエグゼキュータ $e_{m}$ を見つける
+    \end{block}
+    \begin{block}{パート C}
+        最初の 2 つのパートでエグゼキュータに割り当てられなかった全ての残りのノードを処理する
+    \end{block}
 \end{frame}
 
-\begin{frame}{パート B}
-    \begin{itemize}
-        \item このパートでは, $\mathbb{N}$ は, CPU コア $P_{k}$, すなわち $e_{e} \in P_{k}$ に既に割り当てられている空でないエグゼキュータ $e_{m}$ に割り当てられる
-        \item パート A と同様に, このスキームは, $U_{\mathbb{N}}+U_{P_{k}} \leq 1$ である実行可能な全ての空でないエグゼキュータ $e_{m}$ を見つける
-        \item 実行可能なエグゼキュータが存在しない場合, スキームは $\mathbb{N}$ からノード $n$ を抽出し, $\mathbb{N}$ にノードが 1 つだけ残るまで, 使用可能なエグゼキュータを繰り返し探索する
-        \item $\mathbb{N}$ にノードが 1 つしかなく, 実行可能なエグゼキュータが見つからない場合, このノードはパート C によって処理される
-        \item $\mathbb{N}$ は, 利用率が最も低く, 戦略 I から VI を満たすエグゼキュータに割り当てられる
-        \item ストラテジーを満たすエグゼキュータがない場合, $\mathbb{N}$ は Part $\mathrm{C}$ によって処理される
-    \end{itemize}
+\begin{frame}{提案スキームフロー}
+    \fullimage{schema_sup1}
 \end{frame}
 
-\begin{frame}{パート C}
-    \begin{itemize}
-        \item このパートは, パート A とパート B で実行プログラムまたは CPU に割り当てられなかった $\mathbb{N}$ を処理する
-        \item $\mathbb{N}$ を割り当てられなかった理由は 2 つある
-        \item まず, 実行可能な CPU コア $P_{k}$ が見つかりましたが, 戦略 V と VI は満たされない
-        \item この場合, スキームは $P_{k}$ 上の全てのエグゼキュータを単一のエグゼキュータにマージして, 2 つの戦略が自明に満たされるようにする
-        \item 第 2 に, 全ての CPU コアの利用率が 1 を超えている
-        \item III-B 利用率が最も低い CPU コアに $\mathbb{N}$ を割り当てる
-        \item 過負荷の場合の PiCAS とデフォルトの ROS2 スケジューラのスケジューリングパフォーマンスについては, セクション 2 で評価する
-    \end{itemize}
+\begin{frame}{パートAフロー [CPUコアに割り当てられるケース]}
+    \fullimage{partA_sup1}
+\end{frame}
+
+\begin{frame}{パートAフロー [利用率が1以下のCPUコアが見つからないケース]}
+    \fullimage{partA_sup2}
+\end{frame}
+
+\begin{frame}{パートAフロー [戦略V, VIを満たすCPUコアが見つからないケース]}
+    \fitimage{
+        戦略V, VIを満たすCPUコアが見つからない場合, パートCに移行する
+    }{partA_sup3}
+\end{frame}
+
+\begin{frame}{パートBフロー}
+    \fullimage{partB_sup}
+\end{frame}
+
+\begin{frame}{パートCフロー}
+    \fullimage{partC_sup}
 \end{frame}
 
 
 \subsection{Example of priority-driven chain-aware scheduling}
 \label{ssec: example of priority-driven chain-aware scheduling}
 
-\begin{frame}{}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        提案するPiCASフレームワークの下で \hlink{exampleChain}{例のチェーンセット} を再実行する
+    \end{itembox}
+\end{frame}
+
+\begin{frame}{PiCASスケジュール結果比較 [単一エグゼキュータ]}
+    \fullimage{example_comparison_sched_single}
+\end{frame}
+
+\begin{frame}{PiCASスケジュール結果比較 [エグゼキュータ2つ]}
+    \fullimage{example_comparison_sched_two}
+\end{frame}
+
+\begin{frame}{PiCASスケジュール結果比較結論}
+    PiCASは以下の挙動をする
     \begin{itemize}
-        \item セクション IIII で説明したように, テーブル $\Pi$ で設定されたチェーンを思い出してください
-        \item これにより, ROS2 のデフォルトスケジューリングで高いエンドツーエンドレイテンシが発生する
-        \item ここで, 提案された PiCAS フレームワークでチェーンセットを再実行する
-        \item 図 4 に示すように, スケジューラはセマンティック優先順位の高いチェーンのコールバックを最初に実行する
-        \item さらに, Lemma 1 に従って, 各チェーンの前のチェーンインスタンスは, ユニプロセッサ環境で新しいチェーンインスタンスの実行を開始する前に実行を完了する
-        \item 表 III は, (1) 全てのコールバックが単一のエグゼキュータにある, (2) 各チェーンのコールバックが別のエグゼキュータに割り当てられている, という 2 つのケースのエンドツーエンドのレイテンシを示している
-        \item どちらの場合も, PiCAS によって両方のチェーンのレイテンシが大幅に改善されることが分かった
+        \item 優先度の高いチェーンのコールバックを最初に実行する
+        \item 各チェーンの前のチェーンインスタンスは, 新しいチェーンインスタンスの実行開始前に実行を完了する
     \end{itemize}
+\end{frame}
+
+\begin{frame}{PiCASレイテンシ結果比較}
+    \fitimage{
+        PiCAS によって両方のチェーンのレイテンシが大幅に改善される
+    }{example_picas_latency}
 \end{frame}
